--- a/doc2/private/style/load-more/load-more.scss
+++ b/doc2/private/style/load-more/load-more.scss
@@ -2,6 +2,7 @@
 .load-more {
   flex-grow: 1;
   display: flex;
+  align-self: center;
   margin-top: 165px;
 
   &__button {
