--- a/doc2/private/style/main/main.scss
+++ b/doc2/private/style/main/main.scss
@@ -4,7 +4,8 @@
   flex-grow: 1;
   display: flex;
   flex-direction: column;
-  align-items: stretch;
+  justify-content: center;
+  align-items: center;
 
   &__wrapper {
     max-width: $max-page-width;
