--- a/doc2/private/style/subscribe/subscribe.scss
+++ b/doc2/private/style/subscribe/subscribe.scss
@@ -1,6 +1,7 @@
 @import "../variables/variables.scss";
 
 .subscribe {
+  align-self: stretch;
   margin-top: 122px;
   flex-grow: 1;
   height: 287px;
